<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MechanicRegistration">

        <RelativeLayout
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorActionbarColor">

            <ImageView
                android:id="@+id/ivBack"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:scaleType="center"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_back_arrow" />

            <TextView
                android:id="@+id/txt_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:scaleType="center"
                android:text="@string/RegisterHeading"
                android:textColor="#000000"
                android:textSize="16dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewFields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SelectField" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBoxCar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/Car"
                    android:textSize="20dp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="200dp"
                    tools:layout_editor_absoluteY="101dp" />

                <CheckBox
                    android:id="@+id/checkBoxVan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Van"
                    android:textSize="20dp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="150dp"
                    tools:layout_editor_absoluteY="207dp" />

                <CheckBox
                    android:id="@+id/checkBoxBike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Bike"
                    android:textSize="20dp"
                    tools:ignore="MissingConstraints" />

                <CheckBox
                    android:id="@+id/checkBoxTruck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Truck"
                    android:textSize="20dp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="150dp"
                    tools:layout_editor_absoluteY="175dp" />

                <CheckBox
                    android:id="@+id/checkBoxMachines"
                    android:layout_width="242dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Industrial_Machinery"
                    android:textSize="20dp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="162dp"
                    tools:layout_editor_absoluteY="249dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="292dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/textViewLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Location" />

                <Spinner
                    android:id="@+id/spinnerLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="2"
                    android:background="@drawable/edit_text_bg"
                    android:entries="@array/Location_arrays"
                    android:padding="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"

                android:weightSum="3">

                <TextView
                    android:id="@+id/textViewTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/AvailableTime" />

                <Spinner
                    android:id="@+id/spinnerTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="2"
                    android:background="@drawable/edit_text_bg"
                    android:entries="@array/Time_arrays"
                    android:padding="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"

                android:weightSum="3">

                <TextView
                    android:id="@+id/textViewQualifications"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Qualifications" />

                <EditText
                    android:id="@+id/editTextQualifications"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="2"
                    android:background="@drawable/edit_text_bg"
                    android:lines="3" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/textViewDescription"
                    android:layout_width="148dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Description" />

                <EditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="208dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="2"
                    android:background="@drawable/edit_text_bg"
                    android:lines="3" />

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="20dp"
            android:weightSum="3"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNextMechanic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/buttonBackground"
                android:text="@string/next" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="10dp">

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>